2008-02-13  Frank Ch. Eigler  <fche@elastic.org>

	PR 5759
	* tapsets.cxx (build_blacklist): Add some CONFIG_PREEMPT-related
	functions.

2008-02-13  Dave Brolley  <brolley@redhat.com>

	PR5609
	* staptree.h (probe::collect_derivation_chain): Now takes vector<probe*>.
	(probe::get_alias): New virtual method.
	* elaborate.h (derived_probe::collect_derivation_chain): Now takes vector<probe*>.
	* staptree.cxx (probe::collect_derivation_chain): Now takes vector<probe*>. Don't
	cast 'this' to (derived_probe*).
	* elaborate.cxx (derived_probe::collect_derivation_chain): Now takes vector<probe*>.
	(alias_derived_probe::get_alias): New virtual method.
	(alias_derived_probe::alias): New member.
	(alias_expansion_builder::build): Call checkForRecursiveExpansion and emit a
	diagnostic if recursion is detected. Pass alias to constructor of
	alias_derived_probe.
	(alias_expansion_builder::checkForRecursiveExpansion): New method.
	* coveragedb.cxx: Pass vector<probe*> on all calls to collect_derivation_chain.

2008-02-12  Frank Ch. Eigler  <fche@elastic.org>

	PR 4393
	* tapsets.cxx (emit_address): Support relocatable kernels.
	(dwarf_derived_probe ctor): Hack around for missing USHRT_MAX.
	* elaborate.cxx (semantic_pass): Increment rc if exception caught.

2008-02-12  Martin Hunt  <hunt@redhat.com>
	PR 5757
	* tapsets.cxx, translate.cxx: Cleanup indentation a bit.

2008-02-11  Jim Keniston  <jkenisto@us.ibm.com>

	PR 5693
	* runtime/uprobes/uprobes.c: Intercept handler-destined
	signals received while we're single-stepping, and re-queue
	them afterward.
	* runtime/uprobes/uprobes.h: Ditto

2008-02-09  Frank Ch. Eigler  <fche@elastic.org>

	PR5750.
	From Eugeniy Meshcheryakov eugen@debian.org:
	* configure.ac (HAVE_LIBSQLITE3): Complete AC_DEFINE.
	
	* configure, INSTALL, missing, compile, depcomp, install-sh:
	autoreconf -fi'd.

2008-02-09  Frank Ch. Eigler  <fche@elastic.org>

	PR 5751.
	* configure.ac: Add -Werror to trial compilation with